@@ -1,50 +1,5 @@
 package jndiprovider;
 
-/*
- * Copyright (c) Ian F. Darwin, https://darwinsys.com/, 1996-2002.
- * All rights reserved. Software written by Ian F. Darwin and others.
- * $Id$
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
- * 1. Redistributions of source code must retain the above copyright
- *    notice, this list of conditions and the following disclaimer.
- * 2. Redistributions in binary form must reproduce the above copyright
- *    notice, this list of conditions and the following disclaimer in the
- *    documentation and/or other materials provided with the distribution.
- * 
- * The inner classes FlatNames and FlatBindings are from the JNDI
- * sample code, Copyright 1997, 1998, 1999 Sun Microsystems, Inc.
- * All Rights Reserved.
- *
- * Sun grants you ("Licensee") a non-exclusive, royalty free,
- * license to use, modify and redistribute this software in source and
- * binary code form, provided that i) this copyright notice and license
- * appear on all copies of the software; and ii) Licensee does not 
- * utilize the software in a manner which is disparaging to Sun.
- *
- * THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS''
- * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
- * TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
- * PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR OR CONTRIBUTORS
- * BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
- * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
- * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
- * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
- * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
- * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
- * POSSIBILITY OF SUCH DAMAGE.
- * 
- * Java, the Duke mascot, and all variants of Sun's Java "steaming coffee
- * cup" logo are trademarks of Sun Microsystems. Sun's, and James Gosling's,
- * pioneering role in inventing and promulgating (and standardizing) the Java 
- * language and environment is gratefully acknowledged.
- * 
- * The pioneering role of Dennis Ritchie and Bjarne Stroustrup, of AT&T, for
- * inventing predecessor languages C and C++ is also gratefully acknowledged.
- */
-
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.io.IOException;
@@ -88,8 +43,9 @@ class Services implements Context {
 	 * the ServicesContextFactory class.
 	 */
     Services(Hashtable<String,Object> environment) {
-		if (environment != null)
-			myEnv = (Hashtable<String, Object>) (environment.clone()); 
+		if (environment != null) {
+			myEnv = new Hashtable<>(environment); 
+		}
 
 		/** Do the grunt work of reading the services file, stripping comments,
 	 	 * parsing lines, and sticking into "bindings".
@@ -120,7 +76,7 @@ class Services implements Context {
 				String proto = st.nextToken();
 				// Convert the numeric string to an Integer wrapper object.
 				if (proto.equals("tcp")) {
-					bindings.put(service, new Integer(port));
+					bindings.put(service, Integer.valueOf(port));
 				}
 			}
 			is.close();
