@@ -6,8 +6,10 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 /** A simple but reusable HTML/XML tag extractor; not to be confused with an XML parser.
@@ -30,7 +32,7 @@ public class ReadTag {
 	public ReadTag(String theURLString) throws 
 			IOException, MalformedURLException {
 
-		this(new URL(theURLString));
+		this(URI.create(theURLString).toURL());
 	}
 
 	/** Construct a ReadTag given a URL */
@@ -54,7 +56,7 @@ public class ReadTag {
 	 * @param tags The tags to set.
 	 */
 	public void setWantedTags(String[] tags) {
-		this.wantedTags = tags.clone();
+		this.wantedTags = Arrays.copyOf(tags, tags.length);
 	}
 	
 	/**
