@@ -8,7 +8,7 @@ public class ExecDemoSimple {
 	public static void main(String av[]) throws Exception {
 		
 		// Run the "notepad" program or a similar editor
-		Process p = Runtime.getRuntime().exec("kwrite");
+		Process p = Runtime.getRuntime().exec(new String[]{"kwrite"});
 
 		p.waitFor();
 	}
