@@ -1,77 +1,85 @@
 package netweb;
 
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 import java.io.Reader;
 import java.io.StringReader;
 import java.util.List;
 
-import junit.framework.TestCase;
+import org.junit.jupiter.api.Test;
 
 /**
  * Test the Tag Reader
  */
-public class ReadTagTest extends TestCase {
+class ReadTagTest {
 	
 	String htmlText = "<html><head><foo><bar></bar></foo></head><body><p>Paragraph" + 
 		"<a href='http://grelber/' name=\"grelber\">Grelber Info</a>";
-	
-	public void testReadAll() throws Exception {
+
+	@Test
+	void readAll() throws Exception {
 		Reader is = new StringReader(htmlText);
 		ReadTag red = new ReadTag(is);
 		List<Element> readTags = red.readTags();
-		assertNotNull("list from readTags", readTags);
-		assertTrue("HTML tags from readTags", 7 == readTags.size());
+		assertNotNull(readTags, "list from readTags");
+		assertEquals(7, readTags.size(), "HTML tags from readTags");
 		for (Element e : readTags) {
 			System.out.println(e);
 		}
 	}
-	
-	public void testReadSome() throws Exception {
+
+	@Test
+	void readSome() throws Exception {
 		Reader is = new StringReader(htmlText);
 		ReadTag red = new ReadTag(is);
 		red.setWantedTags(new String[] { "a", "foo" });
 		List<Element> readTags = red.readTags();
-		assertNotNull("list from readTags", readTags);
-		assertTrue("any tags from readTags", 2 == readTags.size());
-		assertEquals("get href", "http://grelber/", readTags.get(1).getAttribute("href"));
+		assertNotNull(readTags, "list from readTags");
+		assertEquals(2, readTags.size(), "any tags from readTags");
+		assertEquals("http://grelber/", readTags.get(1).getAttribute("href"), "get href");
 		for (Element e : readTags) {
 			System.out.println(e);
 		}
 	}
-	
-	public void testReadNone() throws Exception {
+
+	@Test
+	void readNone() throws Exception {
 		Reader is = new StringReader(htmlText);
 		ReadTag red = new ReadTag(is);
 		red.setWantedTags(new String[] { });
 		List<Element> readTags = red.readTags();
-		assertNotNull("list from readTags", readTags);
-		assertTrue("any tags from readTags", 0 == readTags.size());
+		assertNotNull(readTags, "list from readTags");
+		assertEquals(0, readTags.size(), "any tags from readTags");
 		for (Element e : readTags) {
 			System.out.println(e);
 		}
 	}
-	
-	public void testReadDocType() throws Exception {
+
+	@Test
+	void readDocType() throws Exception {
 		Reader is = new StringReader("<?xml version='1.0'?>");
 		ReadTag red = new ReadTag(is);
 		List<Element> list = red.readTags();
-		assertNotNull("list from readTags", list);
-		assertTrue("any tags from readTags", 1 == list.size());
-		Element el = (Element)list.get(0);
-		assertEquals("list type", "?xml", el.getType());
+		assertNotNull(list, "list from readTags");
+		assertEquals(1, list.size(), "any tags from readTags");
+		Element el = (Element)list.getFirst();
+		assertEquals("?xml", el.getType(), "list type");
 	}
-	
-	public void testReadAttrs() throws Exception {
+
+	@Test
+	void readAttrs() throws Exception {
 		Reader is = new StringReader(htmlText);
 		ReadTag red = new ReadTag(is);
 		red.setWantedTags(new String[] { "a" });
 		List<Element> list = red.readTags();
-		assertNotNull("list from readTags", list);
-		assertTrue("any tags from readTags", 1 == list.size());
-		Element el = list.get(0);
-		assertEquals("list type", "a", el.getType());
+		assertNotNull(list, "list from readTags");
+		assertEquals(1, list.size(), "any tags from readTags");
+		Element el = list.getFirst();
+		assertEquals("a", el.getType(), "list type");
 		System.out.println("HREF='" + el.getAttribute("href") + "'");
-		assertEquals("name attribute", "grelber", el.getAttribute("name"));
-		assertEquals("href attribute", "http://grelber/", el.getAttribute("href"));
-		assertEquals("body text", "Grelber Info", el.getBodyText());
+		assertEquals("grelber", el.getAttribute("name"), "name attribute");
+		assertEquals("http://grelber/", el.getAttribute("href"), "href attribute");
+		assertEquals("Grelber Info", el.getBodyText(), "body text");
 	}
 }
